<resources>
    <string name="app_name">test_application</string>

    <!--   Fragment Main   -->
    <string name="title_main">Main</string>
    <string name="add">Add</string>

    <!--   Fragment Add   -->
    <string name="title_add">Add</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="wrong_time_interval">Incorrect time interval</string>

    <!--   Fragment Details   -->
    <string name="title_details">Details</string>
    <string name="without_name">Without name</string>

</resources>
